# asdf-auto-install

./: .gitignore  Makefile  asdf_plugin_config.json  plugins_example.json  pyproject.toml  setup.py
asdf_plugin_update/: asdf_plugin_update.py  asdf_plugin_update_config.json  plugin_cls.py
src/: asdf_auto_install.py  plugin_cls.py  run.py
src/asdf_auto_install/: asdf_auto_install.py  install.py
src/asdf_auto_install/cls/: __init__.py  plugin_cls.py
