[tool.poetry]
name = "asdf-auto-install"
version = "0.1.0"
description = "auto installer of asdf plugins"
authors = ["uedakoki <k7ml8.p31@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
asdf-auto-install = "src.asdf_auto_install:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
